// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailField render() renders 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`EmailField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      type="email"
      value="foo@example.com"
    />
  </div>
</div>
`;

exports[`EmailField render() renders with value 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      type="email"
      value="foo@example.com"
    />
  </div>
</div>
`;
